feat: pagina de contato

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Nutróloga especializada em animais - Cuidado nutricional profissional para seu pet com amor e dedicação">
     <meta name="keywords" content="nutrição animal, veterinária, pets, cães, gatos, alimentação animal">
-    <title>NutriPet - Nutrição Especializada para seu Animal</title>
+    <title>NaturaVet - Nutrição Especializada para seu Animal</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
             <div class="nav-wrapper">
                 <div class="logo">
                     <i class="fas fa-heart"></i>
-                    <span>NutriPet</span>
+                    <span>NaturaVet</span>
                 </div>
                 <nav class="nav">
                     <ul class="nav-list">
@@ -232,7 +232,7 @@
                 <div class="footer-section">
                     <div class="logo">
                         <i class="fas fa-heart"></i>
-                        <span>NutriPet</span>
+                        <span>NaturaVet</span>
                     </div>
                     <p>Cuidado nutricional especializado para seu pet com amor e dedicação.</p>
                     <div class="social-links">
@@ -254,13 +254,13 @@
                     <h4>Contato</h4>
                     <div class="contact-info">
                         <p><i class="fas fa-phone"></i> (11) 99999-9999</p>
-                        <p><i class="fas fa-envelope"></i> contato@nutripet.com</p>
+                        <p><i class="fas fa-envelope"></i> contato@NaturaVet.com</p>
                         <p><i class="fas fa-map-marker-alt"></i> São Paulo, SP</p>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 NutriPet. Todos os direitos reservados.</p>
+                <p>&copy; 2024 NaturaVet. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
