feat: dashboard e login page

--- a/contato.html
+++ b/contato.html
@@ -248,44 +248,36 @@
     </main>
 
     <!-- FAQ Section -->
-    <section class="contact-faq">
-        <div class="container">
-            <div class="section-header">
-                <h2>Dúvidas Frequentes sobre Consultas</h2>
-                <p>Respostas rápidas para as perguntas mais comuns</p>
+    <div class="contact-faq">
+    <div class="container">
+        <div class="section-header">
+            <h2>Dúvidas Frequentes</h2>
+            <p>Respostas rápidas para as perguntas mais comuns</p>
+        </div>
+        
+        <div class="faq-grid">
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>Quanto tempo demora para responder?</span>
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+                <div class="faq-answer">
+                    Respondemos todas as mensagens em até 24 horas durante os dias úteis.
+                </div>
             </div>
-            <div class="faq-grid">
-                <div class="faq-card">
-                    <div class="faq-icon">
-                        <i class="fas fa-clock"></i>
-                    </div>
-                    <h3>Quanto tempo demora para responder?</h3>
-                    <p>Respondemos todas as mensagens em até 24 horas durante dias úteis.</p>
+
+            <div class="faq-item">
+                <div class="faq-question">
+                    <span>Como agendar uma consulta?</span>
+                    <i class="fas fa-chevron-down"></i>
                 </div>
-                <div class="faq-card">
-                    <div class="faq-icon">
-                        <i class="fas fa-calendar-alt"></i>
-                    </div>
-                    <h3>Como agendar uma consulta?</h3>
-                    <p>Você pode agendar via WhatsApp, telefone ou preenchendo nosso formulário.</p>
-                </div>
-                <div class="faq-card">
-                    <div class="faq-icon">
-                        <i class="fas fa-video"></i>
-                    </div>
-                    <h3>Fazem consulta online?</h3>
-                    <p>Sim! Oferecemos consultas por videochamada para sua comodidade.</p>
-                </div>
-                <div class="faq-card">
-                    <div class="faq-icon">
-                        <i class="fas fa-money-bill-wave"></i>
-                    </div>
-                    <h3>Qual o valor da consulta?</h3>
-                    <p>Os valores variam conforme o serviço. Entre em contato para orçamento personalizado.</p>
+                <div class="faq-answer">
+                    Você pode agendar pelo WhatsApp, telefone ou preenchendo nosso formulário.
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</div>
 
     <!-- Footer -->
     <footer class="footer">
