feat: página de dashboard

--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Entre em contato com nossa nutróloga especializada em animais - Agende sua consulta">
     <meta name="keywords" content="contato, agendamento, consulta nutricional, veterinária, pets">
-    <title>Contato - NutriPet</title>
+    <title>Contato - NaturaVet</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/contato.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
             <div class="nav-wrapper">
                 <div class="logo">
                     <i class="fas fa-heart"></i>
-                    <span>NutriPet</span>
+                    <span>NaturaVet</span>
                 </div>
                 <nav class="nav">
                     <ul class="nav-list">
@@ -183,7 +183,7 @@
                             </div>
                             <div class="contact-details">
                                 <h4>E-mail</h4>
-                                <p>contato@nutripet.com</p>
+                                <p>contato@NaturaVet.com</p>
                                 <a href="mailto:crossbrasil2018@gmail.com" class="contact-link">
                                     Enviar E-mail
                                 </a>
@@ -286,7 +286,7 @@
                 <div class="footer-section">
                     <div class="logo">
                         <i class="fas fa-heart"></i>
-                        <span>NutriPet</span>
+                        <span>NaturaVet</span>
                     </div>
                     <p>Cuidado nutricional especializado para seu pet com amor e dedicação.</p>
                     <div class="social-links">
@@ -309,13 +309,13 @@
                     <h4>Contato</h4>
                     <div class="contact-info">
                         <p><i class="fas fa-phone"></i> (81) 98579-5635</p>
-                        <p><i class="fas fa-envelope"></i> contato@nutripet.com</p>
+                        <p><i class="fas fa-envelope"></i> contato@NaturaVet.com</p>
                         <p><i class="fas fa-map-marker-alt"></i> Recife, PE</p>
                     </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 NutriPet. Todos os direitos reservados.</p>
+                <p>&copy; 2024 NaturaVet. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
