--- a/login.html
+++ b/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Área restrita - Login para profissionais NutriPet">
-    <title>Login - Área Restrita | NutriPet</title>
+    <meta name="description" content="Área restrita - Login para profissionais NaturaVet">
+    <title>Login - Área Restrita | NaturaVet</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
             <div class="nav-wrapper">
                 <div class="logo">
                     <i class="fas fa-heart"></i>
-                    <span>NutriPet</span>
+                    <span>NaturaVet</span>
                 </div>
                 <a href="index.html" class="btn-back">
                     <i class="fas fa-arrow-left"></i>
@@ -97,25 +97,25 @@
                     <div class="demo-accounts">
                         <div class="demo-account">
                             <h4>👑 Administrador</h4>
-                            <p><strong>Email:</strong> admin@nutripet.com</p>
+                            <p><strong>Email:</strong> admin@NaturaVet.com</p>
                             <p><strong>Senha:</strong> admin123</p>
-                            <button class="btn-demo" data-email="admin@nutripet.com" data-password="admin123">
+                            <button class="btn-demo" data-email="admin@NaturaVet.com" data-password="admin123">
                                 Usar esta conta
                             </button>
                         </div>
                         <div class="demo-account">
                             <h4>👁️ Consultor</h4>
-                            <p><strong>Email:</strong> consultor@nutripet.com</p>
+                            <p><strong>Email:</strong> consultor@NaturaVet.com</p>
                             <p><strong>Senha:</strong> consultor123</p>
-                            <button class="btn-demo" data-email="consultor@nutripet.com" data-password="consultor123">
+                            <button class="btn-demo" data-email="consultor@NaturaVet.com" data-password="consultor123">
                                 Usar esta conta
                             </button>
                         </div>
                         <div class="demo-account">
                             <h4>✏️ Escritor</h4>
-                            <p><strong>Email:</strong> escritor@nutripet.com</p>
+                            <p><strong>Email:</strong> escritor@NaturaVet.com</p>
                             <p><strong>Senha:</strong> escritor123</p>
-                            <button class="btn-demo" data-email="escritor@nutripet.com" data-password="escritor123">
+                            <button class="btn-demo" data-email="escritor@NaturaVet.com" data-password="escritor123">
                                 Usar esta conta
                             </button>
                         </div>
